--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -39,6 +39,7 @@ sqlalchemy>=2.0.0,<3.0
 python-jose[cryptography]==3.4.0
 passlib[bcrypt]==1.7.4
 cryptography==44.0.1
+email-validator>=2.0.0
 
 # Utilities
 python-dateutil==2.9.0
